--- a/hello/.vscode/settings.json
+++ b/hello/.vscode/settings.json
@@ -1,22 +1,7 @@
-# study-java-spring-boot3
-
-## Settings
-
-### CheckStyle
-
-* https://github.com/redhat-developer/vscode-java/wiki/Formatter-settings
-
-```
+{
     "java.checkstyle.version": "10.12.2",
     "java.checkstyle.configuration": "${workspaceFolder}/google_checks.xml",
-```
-
-### Formatter settings
-
-* https://marketplace.visualstudio.com/items?itemName=shengchen.vscode-checkstyle
-  * GoogleStyle
-
-```
+    "java.compile.nullAnalysis.mode": "automatic",
     "editor.formatOnSave": true,
     "java.format.enabled": true,
     "java.format.settings.profile": "GoogleStyle",
@@ -26,4 +11,4 @@
         "editor.tabSize": 2,
         "editor.detectIndentation": false
     },
-```
+}
