--- a/todo/docker-compose.yml
+++ b/todo/docker-compose.yml
@@ -2,19 +2,20 @@ version: "3.1"
 
 services:
   db:
-    image: postgres
     container_name: db-container
+    build:
+      context: ./docker/postgres
+      dockerfile: Dockerfile
     restart: always
     ports:
       - "5432:5432"
     environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - PGTZ=Asia/Tokyo
     volumes:
-      - postgres-data-volume:/var/lib/postgresql/data:rw
+      - postgres-volume-todo:/var/lib/postgresql/data
       - ./docker/postgres/init:/docker-entrypoint-initdb.d
-
 volumes:
-  postgres-data-volume:
-    name: postgres-storage-todo
-    driver: local
+  postgres-volume-todo:
