--- a/todo/src/main/resources/application.properties
+++ b/todo/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql:tododb
+spring.datasource.url=jdbc:postgresql://localhost:5432/tododb
 spring.datasource.username=todouser
 spring.datasource.password=pass
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
