--- a/todo/.github/workflows/auto-approve.yml
+++ b/todo/.github/workflows/auto-approve.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
-    if: github.actor == 'dependabot[bot]'
+    if: github.event.pull_request.user.login == github.repository_owner
     steps:
       - uses: hmarr/auto-approve-action@v4
